<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".home.MarketingCommunications">

   <ImageView
       android:id="@+id/Job"
       android:layout_width="393dp"
       android:layout_height="254dp"
       android:src="@drawable/job4"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       />
   <ScrollView
       android:id="@+id/scroll"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="5dp"
       app:layout_constraintTop_toBottomOf="@id/Job"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent">
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
            android:text="Rincian Kegiatan"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/deskripsi_magang"
             android:fontFamily="@font/poppins_regular"
             android:layout_marginStart="20dp"
             android:layout_marginTop="5dp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
            android:text="Kopetensi yang dikembangkan"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
            android:text="@string/kopetensi_MC"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
            android:text="Kriteria Peserta"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/poppins_regular"
            android:text="@string/kriteria_EVC"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"/>
      </LinearLayout>
   </ScrollView>

   <Button
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:fontFamily="@font/poppins_semibold"
       android:text="Daftar"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/scroll" />

</androidx.constraintlayout.widget.ConstraintLayout>