<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".pendaftaran.PendaftaranFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/backtext"
            android:fontFamily="@font/poppins_bold"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/pendaftaran_top"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pendaftaran Pekerja Praktik"
            android:textSize="16sp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginTop="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Selamat datang di form pendaftaran"
            android:textSize="14sp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/poppins_medium"/>

        <EditText
            android:id="@+id/edt_nama"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="Masukkan Nama"
            android:paddingStart="30dp"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_edittext_bg"
            />

        <EditText
            android:id="@+id/edt_asal_kampus"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="Masukkan Asal Sekolah/Kampus"
            android:paddingStart="30dp"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_edittext_bg"
            />

        <EditText
            android:id="@+id/edt_no_telp"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/rounded_edittext_bg"
            android:fontFamily="@font/poppins_regular"
            android:hint="Masukkan Nomor Telepon/WA"
            android:paddingStart="30dp"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="Masukkan Email Aktif"
            android:paddingStart="30dp"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_edittext_bg"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="15dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
            <AutoCompleteTextView
                android:layout_width="320dp"
                android:layout_height="64dp"
                android:id="@+id/magang"
                android:hint="@string/spinner_hint"
                android:inputType="none"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="15dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
            <AutoCompleteTextView
                android:layout_width="320dp"
                android:layout_height="64dp"
                android:id="@+id/posisi"
                android:hint="@string/posisi_hint"
                android:inputType="none"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Foto Kartu Tanda Penduduk"
            android:layout_marginTop="15dp"
            android:layout_marginStart="18dp"
            android:fontFamily="@font/poppins_medium"
            android:textSize="14sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <Button
                android:layout_width="131dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/poppins_regular"
                android:text="Pilih File"
                android:background="@drawable/rounded_button"
                android:textSize="14sp"
                android:id="@+id/btnktp"/>

            <ImageView
                android:id="@+id/gambarKtp"
                android:layout_width="189dp"
                android:layout_marginStart="20dp"
                android:layout_height="50dp"
                android:src="@drawable/baseline_person_24"
                />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Foto Kartu Tanda Mahasiswa"
            android:layout_marginTop="15dp"
            android:layout_marginStart="18dp"
            android:fontFamily="@font/poppins_medium"
            android:textSize="14sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <Button
                android:layout_width="131dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/poppins_regular"
                android:background="@drawable/rounded_button"
                android:text="Pilih File"
                android:textSize="14sp"
                android:id="@+id/btnktm"/>
            <ImageView
                android:id="@+id/gambarKtm"
                android:layout_width="189dp"
                android:layout_marginStart="20dp"
                android:layout_height="50dp"
                android:src="@drawable/baseline_person_24"
                />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Foto Surat Permohonan"
            android:layout_marginTop="15dp"
            android:layout_marginStart="18dp"
            android:fontFamily="@font/poppins_medium"
            android:textSize="14sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <Button
                android:layout_width="131dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/poppins_regular"
                android:background="@drawable/rounded_button"
                android:text="Pilih File"
                android:textSize="14sp"
                android:id="@+id/btnpermohonan"/>
            <ImageView
                android:id="@+id/gambarPermohonan"
                android:layout_marginStart="20dp"
                android:layout_width="189dp"
                android:layout_height="50dp"
                android:src="@drawable/baseline_person_24"
                />
        </LinearLayout>

        <Button
            android:layout_width="131dp"
            android:layout_height="50dp"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/poppins_bold"
            android:text="Submit"
            android:layout_gravity="center"
            android:clickable="true"
            android:background="@drawable/button_login"
            android:textSize="15sp"
            android:id="@+id/btnsubmit"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="80dp"/>

    </LinearLayout>
</ScrollView>